--- a/predavanja1.ipynb
+++ b/predavanja1.ipynb
@@ -23,32 +23,394 @@
  "nbformat_minor": 2,
  "cells": [
   {
+   "source": [
+    "# Števila v Pythonu\n",
+    "V Pythonu sta osnovni obliki zapisa števil: cela števila (integer) in števila z decimalno piko (float).  \n",
+    "\n",
+    "Primeri celih števil: 1, 5, -3, 200021 \n",
+    "\n",
+    "Primeri števil z decimalno piko: 1.2, 3.14, 2e2, -4.214564e2 \n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "## Osnovna aritmetika"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'Test' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-1c68ea370b40>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mTest\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'Test' is not defined"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 2
     }
    ],
    "source": [
-    "Test"
+    "# Seštevanje\n",
+    "1+2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "source": [
+    "# Odštevanje\n",
+    "1-2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "source": [
+    "# Množenje\n",
+    "3*5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2.5"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "# Deljenje\n",
+    "5/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "# Celo-številsko deljenje\n",
+    "5//3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "source": [
+    "# Ostanek pri deljeju\n",
+    "5%3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "source": [
+    "# Potenciranje\n",
+    "2**4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "3.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
+   "source": [
+    "# S potenciranjem lahko izvedemo tudi korenjenje\n",
+    "9**0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "source": [
+    "# Pravila vrstnega reda\n",
+    "2 + 3 * 4 - 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "-30"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 15
+    }
+   ],
+   "source": [
+    "# Z oklepaji lahko dodelimo prioriteto \n",
+    "(2 + 3) * (4 - 10)"
+   ]
+  },
+  {
+   "source": [
+    "## Dodeljevanje vrednosti\n",
+    "Spremenljivkam dodelimo vrednost s pomočjo enačaja. Poglejmo si nekaj primerov:"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Ustvarimo spremenljivko z imenom x (v Pythonu je vsaka spremenljivka objekt) in vanjo shranimo vrenost 4:\n",
+    "x = 4"
+   ]
+  },
+  {
+   "source": [
+    "Če sedaj x uporabimo, ga Python uporablja kot število 4"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 18
+    }
+   ],
+   "source": [
+    "# Seštevanje dveh spremenljivk (objektov):\n",
+    "x + x"
+   ]
+  },
+  {
+   "source": [
+    "Kaj se zgodi, če v x vpišemo novo vrednost?"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
+   "source": [
+    "# Poglejmo\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Kaj pa sedaj?\n",
+    "x = x + x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 22
+    }
+   ],
+   "source": [
+    "# Poglejmo \n",
+    "x"
+   ]
+  },
+  {
+   "source": [
+    "Imena spremenljivk morajo v Pythonu ustrezati naslednjim navodilom:\n",
+    "- Imena se ne smejo začeti s številko\n",
+    "- V imenu ne sme biti presledka (uporabimo lahko _ )\n",
+    "- V imenu ne smemo uporabiti nobenega od naslednjih znakov :'\",<>/?|\\()!@#$%^&*~-+\n",
+    "- Dobra praksa v Pythonu pravi, da imena spremenljivk pišemo z malo začetnico\n",
+    "- Za imena spremenljivk ne uporabljamo besed, ki imajo v Pythonu poseben pomen: list, str, int, ..."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "Priporočljivo je, da za poimenovanje uporabimo smiselna imena"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "starost = 18\n",
+    "hisna_stevilka = 177"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "177"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
+   "source": [
+    "# Pokaži hišno številko\n",
+    "hisna_stevilka"
+   ]
   }
  ]
 }
